crates/kaban-parser/tests/snapshots/expressions__anonymous_struct_instantiation_with_implicit_field_declarations.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: {x, y,};

Block [
    StructInstantiation {
        name: "NONE",
        fields: [
            Struct Field {
                name: Identifier("x"),
                assignment: Identifier("x"),
            },
            Struct Field {
                name: Identifier("y"),
                assignment: Identifier("y"),
            },
        ],
    },
]
