crates/kaban-parser/tests/snapshots/expressions__array_literals_with_trailing_commas.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: "format! (\"input: {}\\n\\n{:#?}\", input, ast.to_debugger())"
---
input: [10 + 1,] + [10, 2,];

Block [
    Add {
        left: ArrayLit [
            Add {
                left: IntLit("10"),
                right: IntLit("1"),
            },
        ],
        right: ArrayLit [
            IntLit("10"),
            IntLit("2"),
        ],
    },
]
