crates/kaban-parser/tests/snapshots/expressions__assignment_to_nested_member.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: a.b.c = 10;

Block [
    Assignment {
        left: MemberAccess {
            left: MemberAccess {
                left: Identifier("a"),
                right: Identifier("b"),
            },
            right: Identifier("c"),
        },
        right: IntLit("10"),
    },
]
