crates/kaban-parser/tests/snapshots/expressions__bitwise_and_operation.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: x b& y;

Block [
    BAnd {
        left: Identifier("x"),
        right: Identifier("y"),
    },
]
