crates/kaban-parser/tests/snapshots/expressions__bitwise_right_shift_operation.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: x b>> y;

Block [
    RightShift {
        left: Identifier("x"),
        right: Identifier("y"),
    },
]
