crates/kaban-parser/tests/snapshots/expressions__bool_equality.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: "format! (\"input: {}\\n\\n{:#?}\", input, ast.to_debugger())"
---
input: x == false;

Block [
    ExpressionStatement(
        Equal {
            left: Identifier("x"),
            right: false,
        },
    ),
]
