crates/kaban-parser/tests/snapshots/expressions__bubble_up_member_access.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: foo?.bazz;

Block [
    MemberAccess {
        left: BubbleIfErrOrNone(
            Identifier("foo"),
        ),
        right: Identifier("bazz"),
    },
]
